--- a/style.css
+++ b/style.css
@@ -431,6 +431,12 @@ select{
       margin-bottom: 45px;
   }
 
+  .footer-list{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;  
+  }
+
   .footer-form{
    position: relative;
     font-size: 24px;
